[gd_scene load_steps=5 format=3]

[ext_resource type="PackedScene" path="res://scenes/ui/Hud.tscn" id="1"]
[ext_resource type="PackedScene" path="res://scenes/world/World.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/ui/Main.gd" id="3"]
[ext_resource type="Script" path="res://scripts/systems/SisuSystem.gd" id="5"]

[node name="Main" type="Node"]
script = ExtResource("3")

[node name="World" parent="." instance=ExtResource("2")]

[node name="Hud" parent="." instance=ExtResource("1")]

[node name="SisuSystem" type="Node" parent="."]
script = ExtResource("5")

[node name="GrainOverlay" type="CanvasLayer" parent="."]

[node name="Grain" type="ColorRect" parent="GrainOverlay"]
modulate = Color(1, 1, 1, 0.07)
texture_repeat = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="RevealAllButton" type="Button" parent="DebugUI"]
layout_mode = 0
text = "Reveal All"

[node name="SpawnButton" type="Button" parent="DebugUI"]
layout_mode = 0
offset_top = 30.0
offset_bottom = 30.0
text = "Spawn Kiuasvartija at Center"

[node name="SpendSisuButton" type="Button" parent="DebugUI"]
layout_mode = 0
offset_top = 60.0
offset_bottom = 60.0
tooltip_text = "Heal team 20% (5 Sisu, 10s cd)"
text = "Spend Sisu"

[node name="TorilleButton" type="Button" parent="DebugUI"]
layout_mode = 0
offset_top = 90.0
offset_bottom = 90.0
tooltip_text = "Recall units to nearest sauna (5 Sisu, 10s cd)"
text = "Torille!"
